<resources>
    <string name="app_name">Nick Handberg\'s Contacts App</string>
    <string name="title_activity_contact_entry">ContactEntry</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="call">Call</string>
    <string name="update">Update</string>
    <string name="notes">Notes</string>
    <string name="delete">Delete</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

</resources>