<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactEntry">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/nameTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nameET"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edit_text"
                android:ems="10"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="#46404a"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/phoneTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/phoneET"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edit_text"
                android:ems="10"
                android:inputType="phone"
                android:padding="10dp"
                android:textColor="#46404a"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/emailTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edit_text"
                android:ems="10"
                android:inputType="textLongMessage"
                android:padding="10dp"
                android:textColor="#46404a"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/addressTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/addressET"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edit_text"
                android:ems="10"
                android:inputType="textPostalAddress"
                android:padding="10dp"
                android:textColor="#46404a"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="20dp">

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="@string/save" />

                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="@string/cancel" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>