<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactDetails">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <EditText
                android:id="@+id/nameDetailET"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edit_text"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="#46404a"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/nameDetailTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/phoneDetailET"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edit_text"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone"
                android:padding="10dp"
                android:textColor="#46404a"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/phoneDetailTV"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/callButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/call" />

            </LinearLayout>

            <EditText
                android:id="@+id/emailDetailET"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edit_text"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textLongMessage"
                android:padding="10dp"
                android:textColor="#46404a"
                android:textSize="25sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/emailDetailTV"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/emailButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/email" />

            </LinearLayout>

            <EditText
                android:id="@+id/addressDetailET"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/custom_edit_text"
                android:ems="10"
                android:hint="@string/address"
                android:inputType="textPostalAddress"
                android:padding="10dp"
                android:textColor="#46404a"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/addressDetailTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold" />

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapView"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/updateButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="@string/update" />

                <Button
                    android:id="@+id/deleteButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:text="@string/delete" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>